osd/PG: update info.stats.* mappings on split

These are updated in the init and start_peering_interval paths, but not
on split.

Fixes: http://tracker.ceph.com/issues/15523
Signed-off-by: Sage Weil <sage@redhat.com>